--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #262626;
+  background-color: #3A506B;
 }
 
 .Limiter {
@@ -10,13 +10,20 @@ body {
 .Limiter .container {
   width: 100%;
   min-height: 50vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 15px;
   position: relative;
-  background-color: #262626;
+  background-color: #3A506B;
   font-style: Helvetica, sans-serif;
 }
 
@@ -52,7 +59,8 @@ input {
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .h1 {
